panel: enable bundle support for source file
Signed-off-by: Jiamu Sun <barroit@linux.com>

--- a/panel/xheader.html
+++ b/panel/xheader.html
@@ -2,3 +2,9 @@ dnl SPDX-License-Identifier: GPL-3.0-or-later
 dnl
 dnl Copyright 2025 Jiamu Sun <barroit@linux.com>
 dnl
+<div>
+1
+</div>
+<div>
+2
+</div>
