--- a/panel/index.html
+++ b/panel/index.html
@@ -9,16 +9,25 @@
 <head>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <title>Dump</title>
+
+  <meta http-equiv='Content-Security-Policy'
+        content="default-src 'none';
+                 style-src ${webview.cspSource};
+                 script-src 'nonce-${nonce}';"/>
+
+  <link href='${stylesheet}' rel='stylesheet'>
+
+  <title>39dump</title>
 </head>
 
 <body>
-  <header>
+  <header class='flex'>
 include([[panel/xheader.html]])dnl
   </header>
   <main>
 include([[panel/xpreview.html]])dnl
   </main>
+  <script nonce='${nonce}' type='module' src='${script}'></script>
 </body>
 
 </html>
