--- a/panel/0-index.html
+++ b/panel/0-index.html
@@ -4,7 +4,8 @@
   -->
 
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='en'
+      data-vscode-context='{ "preventDefaultContextMenuItems": true } '>
 
 <head>
   <meta charset='utf-8'>
@@ -12,7 +13,7 @@
 
   <meta http-equiv='Content-Security-Policy'
         content="default-src 'none';
-                 style-src ${webview.cspSource};
+                 style-src ${webview.cspSource} 'unsafe-inline';
                  script-src 'nonce-${nonce}';"/>
 
   <link href='${stylesheet}' rel='stylesheet'>
@@ -20,12 +21,14 @@
   <title>39dump</title>
 </head>
 
-<body>
-  <header class='flex'>
-include([[panel/xheader.html]])dnl
+<body class='p-3'>
+  <header class='fixed top-0 right-0'>
+    <aside class='pt-4 pr-4 flex gap-4'>
+include([[panel/header.html]])dnl
+    </aside>
   </header>
-  <main>
-include([[panel/xpreview.html]])dnl
+  <main class='select-none'>
+    <div id='canvas'></div>
   </main>
   <script nonce='${nonce}' type='module' src='${script}'></script>
 </body>
