panel: render chunks on webview
Signed-off-by: Jiamu Sun <barroit@linux.com>

--- a/panel/0-index.html
+++ b/panel/0-index.html
@@ -28,7 +28,7 @@ include([[panel/header.html]])dnl
     </aside>
   </header>
   <main class='select-none'>
-    <div id='canvas'></div>
+    <div id='canvas' class='overflow-auto [&_div]:w-min pt-2'></div>
   </main>
   <script nonce='${nonce}' type='module' src='${script}'></script>
 </body>
