--- a/panel/0-index.html
+++ b/panel/0-index.html
@@ -24,11 +24,11 @@
 <body class='p-3'>
   <header class='fixed top-0 right-0'>
     <aside class='pt-4 pr-4 flex gap-4'>
-include([[panel/header.html]])dnl
+include([[panel/1-header.html]])dnl
     </aside>
   </header>
   <main class='select-none'>
-    <div id='canvas' class='overflow-auto [&_div]:w-min pt-2'></div>
+    <div id='canvas' class='overflow-auto [&_div]:w-min pt-7'></div>
   </main>
   <script nonce='${nonce}' type='module' src='${script}'></script>
 </body>
