build: rework build system
Signed-off-by: Jiamu Sun <barroit@linux.com>

--- a/panel/index.html
+++ b/panel/index.html
@@ -25,7 +25,7 @@
 <body class='p-3'>
   <header class='fixed top-0 right-0'>
     <aside class='pt-4 pr-4 flex gap-4'>
-include([[panel/1-header.html]])dnl
+include(__build__/panel/header.html)dnl
     </aside>
   </header>
 
