--- a/panel/index.html
+++ b/panel/index.html
@@ -22,15 +22,15 @@
   <title>39dump</title>
 </head>
 
-<body class='p-3'>
-  <header class='fixed top-0 right-0'>
+<body class='w-min'>
+  <header class='fixed top-0 right-0 z-39'>
     <aside class='pt-4 pr-4 flex gap-4'>
 include(__build__/panel/header.html)dnl
     </aside>
   </header>
 
-  <main class='select-none'>
-    <div id='canvas' class='overflow-auto [&_div]:w-min pt-7'></div>
+  <main class='p-2 pt-7 select-none'>
+    <div id='canvas' class='relative [&_div]:w-min'></div>
   </main>
 
   <div class='hidden' id='utf16_class' data-uri='${utf16_class}'><div>
