--- a/panel/index.html
+++ b/panel/index.html
@@ -14,6 +14,7 @@
   <meta http-equiv='Content-Security-Policy'
         content="default-src 'none';
                  connect-src ${webview.cspSource};
+                 img-src data:;
                  style-src ${webview.cspSource} 'unsafe-inline';
                  script-src 'nonce-${nonce}';"/>
 
@@ -33,8 +34,8 @@ include(__build__/panel/header.html)dnl
     <div id='canvas' class='relative [&_div]:w-min'></div>
   </main>
 
-  <div class='hidden' id='utf16_class' data-uri='${utf16_class}'><div>
-  <div class='hidden' id='utf16_class_su' data-uri='${utf16_class_su}'><div>
+  <div class='hidden' id='utf16_class_uri' data-uri='${utf16_class}'><div>
+  <div class='hidden' id='utf16_class_su_uri' data-uri='${utf16_class_su}'><div>
 
   <script nonce='${nonce}' type='module' src='${script}'></script>
 </body>
