--- a/panel/index.html
+++ b/panel/index.html
@@ -14,7 +14,7 @@
   <meta http-equiv='Content-Security-Policy'
         content="default-src 'none';
                  connect-src ${webview.cspSource};
-                 img-src data:;
+                 img-src data: blob:;
                  style-src ${webview.cspSource} 'unsafe-inline';
                  script-src 'nonce-${nonce}';"/>
 
