--- a/panel/index.html
+++ b/panel/index.html
@@ -15,6 +15,7 @@
         content="default-src 'none';
                  connect-src ${webview.cspSource};
                  img-src data: blob:;
+                 worker-src blob:;
                  style-src ${webview.cspSource} 'unsafe-inline';
                  script-src 'nonce-${nonce}';"/>
 
@@ -34,6 +35,7 @@ include(__build__/panel/header.html)dnl
     <div id='canvas' class='relative [&_div]:w-min'></div>
   </main>
 
+  <div class='hidden' id='worker_uri' data-uri='${worker}'><div>
   <div class='hidden' id='utf16_class_uri' data-uri='${utf16_class}'><div>
   <div class='hidden' id='utf16_class_su_uri' data-uri='${utf16_class_su}'><div>
 
