panel: add progress bar
Signed-off-by: Jiamu Sun <barroit@linux.com>

--- a/panel/index.html
+++ b/panel/index.html
@@ -27,7 +27,7 @@
 <body class='w-min'>
   <header class='fixed top-0 right-0 z-39'>
     <aside class='pt-4 pr-4 flex gap-4'>
-include(__build__/panel/header.html)dnl
+include(panel/header.html)dnl
     </aside>
   </header>
 
