--- a/panel/header.html
+++ b/panel/header.html
@@ -8,9 +8,11 @@ define([[ICON_SIZE]], [[16px]])
 
 define([[BUTTON]], [[dnl
 <button id='$1_btn'
-        class='p-1 rounded-sm transition duration-100 hover:-translate-y-px
+        class='p-1 rounded-sm transition duration-100
                shadow-[0_1px_2px_rgba(0,0,0,0.25)]
-               hover:shadow-[0_4px_12px_rgba(0,0,0,0.35)]
+               disabled:pointer-events-none
+               disabled:opacity-80 disabled:active:translate-y-0
+               hover:-translate-y-px hover:shadow-[0_4px_12px_rgba(0,0,0,0.35)]
                not-data-[rmb]:active:translate-y-0
                not-data-[rmb]:active:shadow-sm
                focus-visible:ring-1 focus-visible:outline-none
